sass/application.scss
/* ... */
/* Layout */

.outer-container {
  @include outer-container;
}

#wrapper {
  @include row;
  background: white;
}

#top-menu {
  @include row;
  background: $dark-blue;
  color: white;
  padding: 0;
  cursor: default;
  position: relative;
  z-index: 999;
  height: 2em;
  .outer-container {
    ul.menu-children {
      width: 26em;
      top: 99%;
      border: 0;
      background: $dark-blue;
      border-radius: 0 0 4px 4px;
      padding: 0.5em 1em 0.6em;
      > li {
        @include span-columns(6);
        @include omega(2n);
        padding: 0;
        a {
          color: $grey-blue;
          padding: 0.4em;
          width: 95%;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
          &:hover, &:active, &:focus {
            color: white;
          }
          &:before {
            margin-right: 0.5em !important;
          }
        }
      }
    }
  }
  li {
    float: left;
    list-style-type: none;
    white-space: nowrap;
    margin-right: 1em;
    padding: 0;
    &:last-child {
      margin-right: 0.2em;
    }
  }
  a {
    color: $grey-blue;
    font-size: 0.9em;
    padding-top: 0.4em;
    padding-bottom: 0.4em;
    @include transition-duration(0.3s);
    display: inline-block;
    &:hover, &:focus, &:active {
      color: white;
    }
    &:before {
      @extend .fa;
      margin-right: 0.5em;
      vertical-align: middle;
    }
    &.my-page {
      @extend .fa-dashboard;
    }
    &.projects {
      @extend .fa-cubes;
    }
    &.contacts {
      @extend .fa-book;
    }
    &.invoices {
      @extend .fa-file-excel-o;
    }
    &.finance {
      @extend .fa-money;
    }
    &.people {
      @extend .fa-users;
    }
    &.products {
      @extend .fa-shopping-cart;
    }
    &.orders {
      @extend .fa-list-alt;
    }
    &.administration {
      @extend .fa-gears;
    }
    &.calendar {
      @extend .fa-calendar;
    }
    &.gantt {
      @extend .fa-list;
    }
    &.issues {
      @extend .fa-tasks;
    }
    &.all-activities, .acitvities {
      @extend .fa-history;
    }
    &.help {
      @extend .fa-question-circle;
    }
    &.questions {
      @extend .fa-support;
    }
    &.my-account {
      @extend .fa-user;
    }
    &.logout {
      @extend .fa-sign-out;
    }
    &.time-tracker-main-menu {
      @extend .fa-clock-o;
    }
    &.adm-groups {
      @extend .fa-group;
    }
    &.adm-roles {
      @extend .fa-eye;
    }
    &.adm-workflows {
      @extend .fa-th-large;
    }
    &.adm-custom-fields {
      @extend .fa-edit;
    }
    &.adm-enumerations {
      @extend .fa-list;
    }
    &.adm-plugins {
      @extend .fa-puzzle-piece;
    }
    &.adm-projects {
      @extend .fa-cubes;
    }
    &.adm-users {
      @extend .fa-user;
    }
    &.adm-trackers {
      @extend .fa-square;
    }
    &.adm-issue-statuses {
      @extend .fa-pencil-square;
    }
    &.adm-settings {
      @extend .fa-gears;
    }
    &.adm-info {
      @extend .fa-info-circle;
    }
    &.adm-ldap-authentication {
      @extend .fa-key;
    }
    &.cms {
      @extend .fa-sitemap;
    }
    &.tt_start:before, &.tt_stop:before {
      position: relative;
      top: 0;
    }
  }
  #loggedas {
    float: right;
    margin-right: 1em;
    color: $grey-blue;
    font-size: 0.9em;
    a {
      font-size: 1em;
    }
  }
  #account {
    &.cms {
      ul li {
        height: auto !important;
        img.gravatar {
          top: 0;
          margin-right: 0.5em;
        }
      }
    }
    a:before {
      margin-right: 0;
    }
    .menu-children {
      width: 18em;
    }
  }
}

#header {
  @include row;
  background: $blue;
  color: white;
  h1 {
    margin: 0;
    font-size: 1.5em;
    color: white;
    font-weight: 400;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    position: relative;
    padding-left: 3.8em;
    z-index: 0;
  }
  .home {
    display: block;
    width: 3em;
    height: 100%;
    border-right: 1px solid darken($blue, 7%);
    position: absolute;
    top: 0;
    left: 0;
    padding: 0.2em;
    text-align: center;
    &:before {
      content: url(../images/logo.svg);
    }
    &:hover, &:active {
      background: rgba($dark-blue, 0.5);
    }
  }
  #quick-search {
    position: relative;
    top: 0.65em;
    z-index: 5;
    .icon-search {
      &:before {
        z-index: 5;
        position: absolute;
        left: 1.6em;
        top: 0.2em;
        color: $dark-blue;
      }
    }
    #q {
      margin-left: 1em;
      padding-left: 2em !important;
      border-color: rgba($dark-blue, 0.5);
      padding: 0.4em;
      width: 10em;
      background: rgba($dark-blue, 0.3);
      box-shadow: none !important;
      position: relative;
      z-index: 0;
      color: rgba(white, 0.8);
      &:active, &:focus {
        color: $text;
        background: white;
        width: 15em;
      }
    }
  }
  a, a:hover, a:active, a:focus {
    color: white;
  }
  .select2-container {
    margin-left: 1em;
    .select2-chosen {
      font-size: 0.9em;
      color: rgba(white, 0.8);
    }
    .select2-choice {
      background: rgba($dark-blue, 0.3);
      border-color: rgba($dark-blue, 0.5);
      box-shadow: none !important;
      height: 2.2em;
    }
    .select2-arrow {
      border-color: rgba($dark-blue, 0.5);
    }
  }
}

#main-menu {
  @include row;
  background: $light-grey;
  cursor: default;
  box-shadow: inset 0 -1px 0 $medium-grey;
  li {
    display: table-cell;
    width: 1%;
    a {
      display: block;
      color: $grey;
      margin: 0;
      padding: 14px;
      white-space: nowrap;
      text-align: center;
      padding-bottom: 12px;
      &:hover {
        color: $medium-dark-blue;
        border-bottom: 3px solid $medium-dark-blue;
        &:not(.selected) {
          padding-bottom: 12px;
        }
      }
      &.selected, &.selected:hover {
        color: $blue;
        border-bottom: 3px solid $blue;
        padding-bottom: 12px;
      }
    }
  }
}
/* ... */

